@@ -6,6 +6,9 @@ $Id$
 1.1
 ---
 
+- work items: provide "move" action for assigning a work item to
+  another task
+- show work items (if present) for arbitrary concepts
 - portal page with - now fully editable - portal links
 - calendar portlet
 
